<resources>
    <string name="app_name">Kiwari iOS</string>
    <string name="title_chat">Chat</string>
    <string name="title_contact">Contact</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_official">Official</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
