<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_contact"
            android:icon="@drawable/ic_person"
            android:title="@string/title_contact"/>
    <item
            android:id="@+id/navigation_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/title_chat"/>
    <item
            android:id="@+id/navigation_official"
            android:icon="@drawable/ic_official"
            android:title="@string/title_official"/>
    <item
            android:id="@+id/navigation_timeline"
            android:icon="@drawable/empty_timeline"
            android:title="@string/title_timeline"/>
    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_settings"/>
</menu>
